# Copyright 2024 Armando Montanez
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "libusb_linux_config",
    hdrs = ["linux/config.h"],
)

cc_library(
    name = "default_libusb_config",
    hdrs = ["include/config.h"],
    includes = ["include"],
    deps = select({
        "@platforms//os:windows": ["@libusb_srcs//:libusb_msvc_config"],
        "@platforms//os:macos": ["@libusb_srcs//:libusb_macos_config"],
        "@platforms//os:linux": ["//:libusb_linux_config"],
        "//conditions:default": [],
    }),
)

alias(
    name = "libusb_headers",
    actual = "@libusb_srcs//:libusb_headers",
)

alias(
    name = "libusb",
    actual = "@libusb_srcs//:libusb",
)

alias(
    name = "libusb-1.0",
    actual = "@libusb_srcs//:libusb-1.0",
)
